# server

./: .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: __init__.py  gevent_patch.py  local.py  presentation.py  renderable.py
nagare/admin/: app_config.py  app_info.py  app_serve.py  app_spec.py  command.py  info.py  service_info.py
nagare/server/: __init__.py  app.py  app_base.py  application.py  applications.py  base_application.py  gevent_publisher.py  publisher.py  publishers.py  reference.py  restserver.py  services.py  wsgi.py
nagare/services/: base_exceptions_handler.py
nagare/templates/: default_rest.py
nagare/templates/default_rest/: cookiecutter.json
nagare/templates/default_rest/hooks/: post_gen_project.py
nagare/templates/default_rest/{{cookiecutter.project_slug}}/: MANIFEST.in  setup.cfg  setup.py
nagare/templates/default_rest/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: app.py  models.py
nagare/templates/default_rest/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/conf/: {{cookiecutter.project_slug}}.cfg
src/nagare/: gevent_patch.py  local.py  presentation.py  renderable.py
src/nagare/admin/: __init__.py  app_config.py  app_info.py  app_serve.py  app_spec.py  command.py
src/nagare/publishers/: publisher.py
src/nagare/server/: applications.py  base_application.py  publisher.py  publishers.py  reference.py  services.py
src/nagare/services/: base_exceptions_handler.py  publishers.py
test/: test_wsgi.py
tests/: server_test.py
