[metadata]
name = nagare-server
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Nagare application server
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/server
    Tracker = https://github.com/nagareproject/server/issues

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    nagare-config
    nagare-services
    nagare-commands-base
    nagare-services-logging

[options.entry_points]
nagare.commands =
    app = nagare.admin.command:AppCommands
    spec = nagare.admin.app_spec:Spec2

nagare.commands.app =
    info = nagare.admin.app_info:Info
    config = nagare.admin.app_config:Config
    serve = nagare.admin.app_serve:Serve
    spec = nagare.admin.app_spec:Spec

nagare.services =
    local = nagare.local:Local
    exceptions = nagare.services.base_exceptions_handler:ExceptionsService
    publisher = nagare.server.publishers:Publishers
    application = nagare.server.applications:Application

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
